--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ dependencies {
     testImplementation 'io.qameta.allure:allure-selenide:2.13.3'
     testCompileOnly 'org.projectlombok:lombok:1.18.22'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
+    testImplementation 'mysql:mysql-connector-java:8.0.22'
+    testImplementation 'commons-dbutils:commons-dbutils:1.7'
+
 }
 
 test {
