--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     ports:
       - "3306:3306"
     volumes:
-      - mysql-data:/var/lib/mysql
+      - ./mysql-data:/var/lib/mysql
 
 # -----------------  PostgreSQL  -----------------
   postgres:
@@ -25,7 +25,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - pg-data:/var/lib/postgresql/data
+      - ./pg-data:/var/lib/postgresql/data
 
 # -----------------  Bank-gate simulator  -----------------
   gate:
@@ -36,8 +36,3 @@ services:
       - "9999:9999"
     environment:
       NODE_ENV: production
-   
-
-volumes:
-  mysql-data:
-  pg-data:
